--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -899,7 +899,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  background-color: #fff;
+  background-color: #002147;
 }
 input,
 button,
@@ -1418,8 +1418,6 @@ pre code {
   margin-left: auto;
 }
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
@@ -6252,10 +6250,18 @@ button.close {
     border-radius: 6px 0 6px 6px;
 }
 
+input{
+}
+
 .home{
-	height:100%;
-	width:100%;
+	position:relative;
+	min-height:100%;
+	min-width:100%;
 	background-color:#002147;
+	padding-top:75px;
+	color:white;
+	margin:0;
+	text-align:"center";
 }
 
 .navbar{
@@ -6263,3 +6269,39 @@ button.close {
 	border:0px;
 }
 
+.about{
+	position:relative;
+	background-color:#002147;
+	color:white;
+	min-height:100%;
+	min-width:100%;
+}
+
+.about > p{
+	margin-left:3%;
+	margin-right:3%;
+}
+
+.accessories {
+	color:white;
+	min-height:100%;
+	min-width:100%;
+}
+.services{
+	min-height:100%;
+	min-width:100%;
+	color:white;
+}
+
+.services > p{
+	margin-left:3%;
+	margin-right:3%;
+	font-size:17px;
+}
+
+
+.contact{
+	min-height:100%;
+	min-width:100%;
+	color:white;
+}
