--- a/templates/htmltop.html
+++ b/templates/htmltop.html
@@ -18,13 +18,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Home</a>
+          <a class="navbar-brand" href="#home">Home</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Accessories</a></li>
-	    <li><a href="">Services</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#accessories">Accessories</a></li>
+	    <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tech Specifications<span class="caret"></span></a>
