--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,92 @@
 {% include "htmltop.html" %}
 
 
-<div class="home">
+<div id="home" class="home" align="center">
+	<h1 align="center">WELCOME TO SONY RIGS</h1><br><br>
+	<div class="row">
+		<div class="col-md-6">
+			<img src="/static/images/home_img.JPG" height=60% style="margin-top:30px;">
+		</div>
+		<div class="col-md-5">
+	<h2>Our Vision</h2><br>
+	<h3>To make variety of rigs for a wide range of drilling for our customers all round the world. </h3><br>
+	<h2>Our Mission</h2><br>
+	<h3>To exceed our customers’ expectations in quality, delivery, and cost<br> through continuous improvement and customer interaction.</h3>
+	</div>
+	</div>
+
+</div>
+
+<div class="about" id="about">
+	<h1 align="center">About Us</h1>
+	<p style="font-size:17px;">Sony Rigs and Hydraulics Private limited, a family-owned drilling company was established in Tiruchengode, Tamilnadu State, India by Mr. N. Gunasekaran and his son Mr. Cibiraj Gunasekaran. The company originally derived from Sony Borewells that have been in drilling industry since 1980 working in various private & public sector projects all over India. In 2002 Sony Rig Spares was founded and this was the first-step to move into retailing drilling tools, hydraulics accessories & spares and from there-on enhanced its caliber into rig manufacturing. This had led into establishing a new venture in the name of Sony Rigs and Hydraulics Private Limited. <br><br>
+
+Sony Rigs is manufacturing a wide range of drilling rigs that suits various applications (Water Well Drilling, Diamond Core Drilling, Reverse Circulation Drilling, Piling & Pole Drilling, Portable Drilling). Our rigs are made suitable to mount on trucks and crawlers. We also fabricate custom-built rigs as per the exact choice of customers. Everything we do is dedicated to meeting the needs of the drilling end-users. Driven by customers requirements, Sony Rigs design and manufacture its products around the traditions of superior quality, innovation & flexibility. By utilizing modern facilities for designing and fully integrated manufacturing processes, our end-user dreams are absolutely transformed into drilling solutions to meet the ever-increasing demands of the industry.
+In a market where adapting to latest changes is traditionally slow, we have progressively improved the function & quality of our products to provide up-to-date world class performance & reliability.<br><br>
+Sony Rigs approaches all its domestic & international customers with an emphasis on long term basis only, which means establishing a benevolent relationship directly with its end-users everlastingly. <br><br>
+On these auspicious lines, we request you to kindly send us your inquiry through the form available in our website that enables us to respond and serve you with immense pleasure.  <br><br>
+Wishing joyous drilling!!<br><br>
+
+</div>
+
+<div class="accessories" id="accessories">
+	<h4 align="center">	Sony Rigs also supply the following drilling accessories and equipments of whatever sizes and quantity as required by the end-users:</h4>
+	<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-4">
+	</div>
+	</div>
+
+</div>
+
+<div class="services" id="services">
+	<h3 align="center">Services</h3>
+	<p>
+	In the name of <strong>Sony Borewells</strong>, we have been providing services in drilling projects to customers spread all over India and Bhutan consecutively for more than 3 decades since 1980.  We have exclusively deployed 10 numbers of rig fleets for carrying out water drilling projects and micro-piling drilling projects as per the exact need of our customers.  The in-depth experience has made Sony Borewells to successfully perform many drilling projects to the absolute satisfaction of the end-user at all times and we are proud to say that we are a specialist in micro-piling and water-well drilling.<br><br>
+	We are looking to expand into other kinds of drilling projects, such as Core Drilling, Piling Works (dia above 20 inches) and Reverse Circulation Drilling.<br><br>
+
+	Following are our esteemed clientele: <br><br>
+	<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-6">
+	<ul>
+		<li>L&T - Larsen &Toubro, Bhutan</li>
+		<li>	NGRI - National Geographical Research Institute, India</li>
+		<li>ONGC - Oil and Natural Gas Corporation, India</li>
+		<li>	Government of Rajasthan, India</li>
+	<li>	Government of Karnataka, India</li>
+	<li>	Government of Tamilnadu, India</li>
+	<li>Government of Orissa, India</li>
+	<li>	Infosys, India</li>
+	<li>Confident Group (Infrastructures), India</li>
+	<li>	RAN India Steels Pvt. Ltd., India</li>
+	</ul>
+	</div>
+	</div>
+	</p>
+</div>
+
+<div class="contact" id="contact">
+	<strong><h3 align="center">SONY RIGS & HYDRAULICS PVT LTD.</h3></strong>
+	<p align="center">
+	[Manufacturer & Exporter of ‘Sony’ Water Well & Mining Drilling Rigs]<br>
+	No.3/230D, Sankari Road,<br>
+	Tiruchengode – 637304, Namakkal District,<br>
+	Tamilnadu, INDIA.<br>
+	Cell Phone: +91 9600535555 / Telefax: +91 4288 257555<br></p>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
+	<form id="contactform" align="center" style="margin-top:30px;">
+		<input type="text" id="name" placeholder="Name" class="form-control"><br>
+		<input type="text" id="email" placeholder="Email" class="form-control"><br>
+		<input type="text" id="subject" placeholder="Subject" class="form-control"><br>
+		<textarea id="message" placeholder="Message" class="form-control" rows=5></textarea><br>
+		<button type="submit" class="btn btn-default">Submit</button>
+	</form>
+	</div>
+	</div>
+
 </div>
 
 
