--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<h1 align="center">WELCOME TO SONY RIGS</h1><br><br>
 	<div class="row">
 		<div class="col-md-6">
-			<img src="/static/images/home_img.JPG" height=60% style="margin-top:30px;">
+			<img src="/static/images/home_img.jpg" height=60% style="margin-top:30px;">
 		</div>
 		<div class="col-md-5">
 	<h2>Our Vision</h2><br>
@@ -32,10 +32,42 @@ Wishing joyous drilling!!<br><br>
 <div class="accessories" id="accessories">
 	<h4 align="center">	Sony Rigs also supply the following drilling accessories and equipments of whatever sizes and quantity as required by the end-users:</h4>
 	<div class="row">
-		<div class="col-md-2"></div>
-		<div class="col-md-4">
+		<div class="col-md-3">
+			<img src="/static/images/accessories/drill_rods.png">
+			<h4>Drill Rods</h4>
+		</div>
+		<div class="col-md-3">
+			<img src="/static/images/accessories/drill_hammer.png">
+			<h4>Drill Hammers</h4>
+		</div>
+		<div class="col-md-3">
+			<img src="/static/images/accessories/drill_rod.png">
+			<h4>Drill Bits</h4>
+		</div>
+		<div class="col-md-3">
+			<img src="/static/images/accessories/handpump.png">
+			<h4>Hand Pump</h4>
+		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<img src="/static/images/accessories/handheld.png">
+			<h4>Handheld Jack Hammer</h4>
+		</div>
+		<div class="col-md-3">
+			<img src="/static/images/accessories/hammers_bits.png">
+			<h4>Hammers & Bits</h4>
+		</div>
+		<div class="col-md-3">
+			<img src="/static/images/accessories/hydraulicpump.png">
+			<h4>Hydraulic Pumps</h4>
+		</div>
+		<div class="col-md-3">
+			<img src="/static/images/accessories/mudpump.png">
+			<h4>Mud Pump</h4>
+		</div>
 	</div>
+	<p style="margin-top:3%;font-size:17px;"><strong>Handheld Hydraulic Rock Drill Jack Hammer</strong> for the purpose of drilling blast, anchor, rock splitting holes in quarries, buildings and constructions without large compressors duly supplied with suitable drill rods of various sizes</p>
 
 </div>
 
@@ -78,10 +110,10 @@ Wishing joyous drilling!!<br><br>
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
 	<form id="contactform" align="center" style="margin-top:30px;">
-		<input type="text" id="name" placeholder="Name" class="form-control"><br>
-		<input type="text" id="email" placeholder="Email" class="form-control"><br>
-		<input type="text" id="subject" placeholder="Subject" class="form-control"><br>
-		<textarea id="message" placeholder="Message" class="form-control" rows=5></textarea><br>
+		<input type="text" id="name" placeholder="Name" class="form-control" required><br>
+		<input type="email" id="email" placeholder="Email" class="form-control" required><br>
+		<input type="text" id="subject" placeholder="Subject" class="form-control" required><br>
+		<textarea id="message" placeholder="Message" class="form-control" rows=5 required></textarea><br>
 		<button type="submit" class="btn btn-default">Submit</button>
 	</form>
 	</div>
