--- a/templates/htmltop.html
+++ b/templates/htmltop.html
@@ -33,7 +33,7 @@
 			<a tabindex="-1" href="#">Water Well Rigs
 			</a>
 			<ul class="dropdown-menu">
-				<li><a href="#">Sony Propel-650a DTH Rig</a></li>
+				<li><a href="#propel">Sony Propel-650a DTH Rig</a></li>
 				<li><a href="#">Sony Thrust-450 DTH Rig</a></li>
 				<li><a href="#">Sony Force-300 DTH Rig</a></li>
 				<li><a href="#">Sony Surf-150 DTH Rig</a></li>
