Gallery and home carousels added

--- a/templates/htmltop.html
+++ b/templates/htmltop.html
@@ -4,6 +4,8 @@
 <title>{{ page_title }}</title>
 
 <link rel="stylesheet" href="/static/css/bootstrap.css">
+<link rel="stylesheet" href="/static/css/styles.css">
+<link rel="stylesheet" href="/static/css/font-awesome.min.css">
 
 </head>
 
@@ -22,39 +24,23 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About Us</a></li>
             <li><a href="#accessories">Accessories</a></li>
 	    <li><a href="#services">Services</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="/gallery">Gallery</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tech Specifications<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown-submenu">
-			<a tabindex="-1" href="#">Water Well Rigs
+                <li>
+			<a href="/water-well-rigs">Water Well Rigs
 			</a>
-			<ul class="dropdown-menu">
-				<li><a href="#propel">Sony Propel-650a DTH Rig</a></li>
-				<li><a href="#">Sony Thrust-450 DTH Rig</a></li>
-				<li><a href="#">Sony Force-300 DTH Rig</a></li>
-				<li><a href="#">Sony Surf-150 DTH Rig</a></li>
-				<li><a href="#">Sony-150 DTH (Tractor Mounted Rig)</a></li>
-				<li><a href="#">Sony-150 DTH (Tram Mounted Rig)</a></li>
-				<li><a href="#">Sony-150 Portable Rig (Pneumatic Method)</a></li>
-				<li><a href="#">Sony-150 Poratble Rig (Hydraulic Method) </a></li>
-			</ul>
 		</li>
-		<li class="dropdown-submenu">
-			<a tabindex="-1" href="#">Mining & Exploration Rigs</a>
-			<ul class="dropdown-menu">
-				<li><a href="#">Sony-400CDR (Core Drilling Rig)</a>
-				<li><a href="#">Sony-450RC (Reverse Circulation Rigs)</a></li>
-			</ul>
+		<li>
+			<a href="/mining-exploration-rigs">Mining & Exploration Rigs</a>
 		</li>
-		<li class="dropdown-submenu">
-			<a tabindex="-1" href="#">Autoloader Rigs</a>
-			<ul class="dropdown-menu">
-				<li><a href="#">Sony-500AL (Autoloader)</a>
-			</ul>
+		<li >
+			<a href="/autoloader-rigs">Autoloader Rigs</a>
 		</li>
 
 
