--- a/templates/index.html
+++ b/templates/index.html
@@ -3,33 +3,77 @@
 
 <div id="home" class="home" align="center">
 	<h1 align="center">WELCOME TO SONY RIGS</h1><br><br>
-	<div class="row">
-		<div class="col-md-6">
-			<img src="/static/images/home_img.jpg" height=60% style="margin-top:30px;">
+	<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval=3000 >
+
+		<!-- Carousel indicators -->
+
+		<ol class="carousel-indicators">
+
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+			<li data-target="#myCarousel" data-slide-to="3"></li>
+			<li data-target="#myCarousel" data-slide-to="4"></li>
+			<li data-target="#myCarousel" data-slide-to="5"></li>
+
+		</ol>   
+
+		<!-- Carousel items -->
+
+		<div class="carousel-inner">
+
+			<div class="item active">
+				<img src="/static/images/home/1.JPG">
+			</div>
+			<div class="item">
+				<img src="/static/images/home/2.JPG">
+			</div>
+			<div class="item">
+				<img src="/static/images/home/3.JPG">
+			</div>
+			<div class="item ">
+				<img src="/static/images/home/4.JPG">
+			</div>
+			<div class="item ">
+				<img src="/static/images/home/5.JPG">
+			</div>
+			<div class="item ">
+				<img src="/static/images/home/6.jpg">
+			</div>
+
 		</div>
-		<div class="col-md-5">
-	<h2>Our Vision</h2><br>
-	<h3>To make variety of rigs for a wide range of drilling for our customers all round the world. </h3><br>
-	<h2>Our Mission</h2><br>
-	<h3>To exceed our customers’ expectations in quality, delivery, and cost<br> through continuous improvement and customer interaction.</h3>
-	</div>
-	</div>
 
+		<!-- Carousel nav -->
+
+		<a class="carousel-control left" href="#myCarousel" data-slide="prev">
+
+			<span class="glyphicon glyphicon-chevron-left"></span>
+
+		</a>
+
+		<a class="carousel-control right" href="#myCarousel" data-slide="next">
+
+			<span class="glyphicon glyphicon-chevron-right"></span>
+
+		</a>
+
+	</div>
+	<div class="row">
+		<div class="col-md-1"></div>
+		<div class="col-md-4"><h3>Our Vision</h3>
+				To make variety of rigs for a wide range of drilling for our customers all round the world. 
+			</div>
+		<div class="col-md-2"></div>
+		<div class="col-md-4"><h3>Our Mission</h3>
+			To exceed our customers’ expectations in quality, delivery, and cost through continuous improvement and customer interaction.</div>
+	</div>
 </div>
 
-<div class="about" id="about">
-	<h1 align="center">About Us</h1>
-	<p style="font-size:17px;">Sony Rigs and Hydraulics Private limited, a family-owned drilling company was established in Tiruchengode, Tamilnadu State, India by Mr. N. Gunasekaran and his son Mr. Cibiraj Gunasekaran. The company originally derived from Sony Borewells that have been in drilling industry since 1980 working in various private & public sector projects all over India. In 2002 Sony Rig Spares was founded and this was the first-step to move into retailing drilling tools, hydraulics accessories & spares and from there-on enhanced its caliber into rig manufacturing. This had led into establishing a new venture in the name of Sony Rigs and Hydraulics Private Limited. <br><br>
-
-Sony Rigs is manufacturing a wide range of drilling rigs that suits various applications (Water Well Drilling, Diamond Core Drilling, Reverse Circulation Drilling, Piling & Pole Drilling, Portable Drilling). Our rigs are made suitable to mount on trucks and crawlers. We also fabricate custom-built rigs as per the exact choice of customers. Everything we do is dedicated to meeting the needs of the drilling end-users. Driven by customers requirements, Sony Rigs design and manufacture its products around the traditions of superior quality, innovation & flexibility. By utilizing modern facilities for designing and fully integrated manufacturing processes, our end-user dreams are absolutely transformed into drilling solutions to meet the ever-increasing demands of the industry.
-In a market where adapting to latest changes is traditionally slow, we have progressively improved the function & quality of our products to provide up-to-date world class performance & reliability.<br><br>
-Sony Rigs approaches all its domestic & international customers with an emphasis on long term basis only, which means establishing a benevolent relationship directly with its end-users everlastingly. <br><br>
-On these auspicious lines, we request you to kindly send us your inquiry through the form available in our website that enables us to respond and serve you with immense pleasure.  <br><br>
-Wishing joyous drilling!!<br><br>
-
-</div>
 
 <div class="accessories" id="accessories">
+	<h2 align="center">Accessories</h2><br>
 	<h4 align="center">	Sony Rigs also supply the following drilling accessories and equipments of whatever sizes and quantity as required by the end-users:</h4>
 	<div class="row">
 		<div class="col-md-3">
@@ -79,24 +123,37 @@ Wishing joyous drilling!!<br><br>
 
 	Following are our esteemed clientele: <br><br>
 	<div class="row">
-		<div class="col-md-2"></div>
+		<div class="col-md-1"></div>
 		<div class="col-md-6">
-	<ul>
-		<li>L&T - Larsen &Toubro, Bhutan</li>
-		<li>	NGRI - National Geographical Research Institute, India</li>
-		<li>ONGC - Oil and Natural Gas Corporation, India</li>
-		<li>	Government of Rajasthan, India</li>
-	<li>	Government of Karnataka, India</li>
-	<li>	Government of Tamilnadu, India</li>
-	<li>Government of Orissa, India</li>
-	<li>	Infosys, India</li>
-	<li>Confident Group (Infrastructures), India</li>
-	<li>	RAN India Steels Pvt. Ltd., India</li>
+	<ul style="list-style-type: none;">
+		<li><i class="fa fa-arrow-right"></i> L&T - Larsen &Toubro, Bhutan</li>
+		<li><i class="fa fa-arrow-right"></i> 	NGRI - National Geographical Research Institute, India</li>
+		<li><i class="fa fa-arrow-right"></i> ONGC - Oil and Natural Gas Corporation, India</li>
+		<li><i class="fa fa-arrow-right"></i> 	Government of Rajasthan, India</li>
+	<li><i class="fa fa-arrow-right"></i> 	Government of Karnataka, India</li>
+	<li><i class="fa fa-arrow-right"></i> 	Government of Tamilnadu, India</li>
+	<li><i class="fa fa-arrow-right"></i> Government of Orissa, India</li>
+	<li><i class="fa fa-arrow-right"></i> 	Infosys, India</li>
+	<li><i class="fa fa-arrow-right"></i> Confident Group (Infrastructures), India</li>
+	<li><i class="fa fa-arrow-right"></i> 	RAN India Steels Pvt. Ltd., India</li>
 	</ul>
 	</div>
 	</div>
 	</p>
 </div>
+
+<div class="about" id="about">
+	<h1 align="center">About Us</h1>
+	<p style="font-size:17px;">Sony Rigs and Hydraulics Private limited, a family-owned drilling company was established in Tiruchengode, Tamilnadu State, India by Mr. N. Gunasekaran and his son Mr. Cibiraj Gunasekaran. The company originally derived from Sony Borewells that have been in drilling industry since 1980 working in various private & public sector projects all over India. In 2002 Sony Rig Spares was founded and this was the first-step to move into retailing drilling tools, hydraulics accessories & spares and from there-on enhanced its caliber into rig manufacturing. This had led into establishing a new venture in the name of Sony Rigs and Hydraulics Private Limited. <br><br>
+
+Sony Rigs is manufacturing a wide range of drilling rigs that suits various applications (Water Well Drilling, Diamond Core Drilling, Reverse Circulation Drilling, Piling & Pole Drilling, Portable Drilling). Our rigs are made suitable to mount on trucks and crawlers. We also fabricate custom-built rigs as per the exact choice of customers. Everything we do is dedicated to meeting the needs of the drilling end-users. Driven by customers requirements, Sony Rigs design and manufacture its products around the traditions of superior quality, innovation & flexibility. By utilizing modern facilities for designing and fully integrated manufacturing processes, our end-user dreams are absolutely transformed into drilling solutions to meet the ever-increasing demands of the industry.
+In a market where adapting to latest changes is traditionally slow, we have progressively improved the function & quality of our products to provide up-to-date world class performance & reliability.<br><br>
+Sony Rigs approaches all its domestic & international customers with an emphasis on long term basis only, which means establishing a benevolent relationship directly with its end-users everlastingly. <br><br>
+On these auspicious lines, we request you to kindly send us your inquiry through the form available in our website that enables us to respond and serve you with immense pleasure.  <br><br>
+Wishing joyous drilling!!<br><br>
+
+</div>
+
 
 <div class="contact" id="contact">
 	<strong><h3 align="center">SONY RIGS & HYDRAULICS PVT LTD.</h3></strong>
@@ -121,71 +178,6 @@ Wishing joyous drilling!!<br><br>
 	</div>
 
 </div>
-
-<div class="about" id="propel">
-	<h4 align="center">SONY PROPEL-650a DTH RIG</h4>
-	<div class="row">
-		<div class="col-md-3"><img src="/static/images/propel.JPG" class="techspec"></div>
-		<div class="col-md-9">
-			<table class="table">
-				<tr>
-					<th>Title</th>
-					<th>Specifics</th>
-				</tr>
-				<tr>
-					<td>Drill Hole Size</td>
-					<td>From 6" to 14" diameter bore holes</td>
-				</tr>
-				<tr>
-					<td>Maximum Depth</td>
-					<td>650 Meters(2100 Feet)</td>
-				</tr>
-				<tr>
-					<td>Mast Assembly</td>
-					<td>Heavy Duty structural steel channel construction with suitable hydraulic cylinder for mast raising and loading</td>
-				</tr>
-				<tr>
-					<td>Rotatory Heading</td>
-					<td>Hydraulic top drive with 533mm retraction</td>
-				</tr>
-				<tr>
-					<td>Capacity</td>
-					<td>Pull Up: 6818kgf/ Pull Down: 7272kgf</td>
-				</tr>
-				<tr>
-					<td>Hydraulic System Operation</td>
-					<td>By two Gear Pumps of 126 K6-cm2 pressure @ 245LPM pump flow</td>
-				</tr>
-				<tr>
-					<td>Prime Mover(Input Drive)</td>
-					<td>The power for rig is taken from the truck engine through transfer gear box (or) a separate engine with suitable capacity duly mounted on the deck of the truck platform. The rig unit can also be mounted on track crawler undercarriage.</td>
-				</tr>
-				<tr>
-					<td>HYDRAULIC DRIVEN MUD PUMP
-					(If mud drilling preferred)</td>
-					<td>MP-200 (8” x 6”) model mud pump / Stroke 200mm, Liner Size 150mm, Working Pressure 20.74 Kg/Cm2 with maximum flow capacity of 1361 LPM @ required power of 75 BHP.</td>
-				</tr>
-				<tr>
-					<td>HYDRAULIC LEVELING JACKS</td>
-					<td>A suitable 4 nos. of box type stabilizer jacks – two in front and two in rear.
-					</td>
-				</tr>
-				<tr>
-					<td>BREAK OUT CLAMP ASSEMBLY</td>
-					<td>Actuation type cylinder for breaking drill rod joints without manual intervention.
-					</td>
-				</tr>
-				<tr>
-					<td>SUITABLE COMPRESSOR</td>
-					<td>1500 cfm @ 400 psi  / 1350 cfm @ 365 ps</td>
-				</tr>
-			</table>
-		</div>
-
-	</div>
-</div>
-
-
 
 
 {% include "htmlbottom.html" %}
