--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -935,16 +935,15 @@ img {
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   display: block;
-  width: 100% \9;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 55%;
 }
 .img-rounded {
   border-radius: 6px;
 }
 .img-thumbnail {
   display: inline-block;
-  width: 100% \9;
+  width: 100% ;
   max-width: 100%;
   height: auto;
   padding: 4px;
@@ -5716,7 +5715,7 @@ button.close {
 }
 .carousel-inner {
   position: relative;
-  width: 100%;
+  width: 60%;
   overflow: hidden;
 }
 .carousel-inner > .item {
@@ -5764,8 +5763,9 @@ button.close {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  width: 15%;
+  left: 20%;
+
+  width: 5%;
   font-size: 20px;
   color: #fff;
   text-align: center;
@@ -5782,7 +5782,7 @@ button.close {
   background-repeat: repeat-x;
 }
 .carousel-control.right {
-  right: 0;
+  right: 20%;
   left: auto;
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
   background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
@@ -6258,7 +6258,7 @@ input{
 	min-height:100%;
 	min-width:100%;
 	background-color:#002147;
-	padding-top:75px;
+	padding-top:50px;
 	color:white;
 	margin:0;
 	text-align:"center";
@@ -6290,7 +6290,6 @@ input{
 }
 
 .accessories .row{
-	padding-top:2%;
 }
 .services{
 	min-height:100%;
