--- a/templates/htmlbottom.html
+++ b/templates/htmlbottom.html
@@ -1,12 +1,21 @@
 <script src="/static/js/jquery1-11-1.js"></script>
+<script src="/static/js/modernizr.custom.79639.js"></script>
+<script type="text/javascript" src="/static/js/jquery.gallery.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 <script>
+
+$(document).ready(function(){
+	$("#myCarousel").carousel();
+	$('#dg-container').gallery({
+					autoplay:true
+					});
+});
 $('a[href^="#"]').on('click',function(e){
 			e.preventDefault();
 			var target=this.hash,
 			$target=$(target),x=150;
 			$('html,body').animate({
-				'scrollTop': $target.offset().top-100
+				'scrollTop': $target.offset().top-80
 
 
 
