--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,4 +1,57 @@
-{% include "htmltop.html"%}
+<html>
+<head>
+
+<title>{{ page_title }}</title>
+
+<link rel="stylesheet" href="/static/css/bootstrap.css">
+<link rel="stylesheet" href="/static/css/styles.css">
+<link rel="stylesheet" href="/static/css/font-awesome.min.css">
+
+</head>
+
+<body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/#home">Home</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/#accessories">Accessories</a></li>
+	    <li><a href="/#services">Services</a></li>
+            <li><a href="/#about">About Us</a></li>
+            <li><a href="/#contact">Contact</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li>
+			<a href="/water-well-rigs">Water Well Rigs
+			</a>
+		</li>
+		<li>
+			<a href="/mining-exploration-rigs">Mining & Exploration Rigs</a>
+		</li>
+		<li >
+			<a href="/autoloader-rigs">Autoloader Rigs</a>
+		</li>
+
+
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+
 <div style="margin-top:15%;">
 <div id="dg-container" class="dg-container">
 	<div class="dg-wrapper">
