About page images

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,20 @@
 </div>
 
 <div class="about" id="about">
-	<h1 align="center">About Us</h1>
+	<div class="row">
+		<div class="col-md-1"></div>
+		<div class="col-md-3">
+			<img src="/static/images/about/1.JPG" class="about_img">
+		</div>
+		<div class="col-md-4">
+
+		<h1 align="center">About Us</h1>
+		</div>
+		<div class="col-md-1"></div>
+		<div class="col-md-3">
+			<img src="/static/images/about/2.JPG" class="about_img">
+		</div>
+	</div>
 	<p style="font-size:17px;">Sony Rigs and Hydraulics Private limited, a family-owned drilling company was established in Tiruchengode, Tamilnadu State, India by Mr. N. Gunasekaran and his son Mr. Cibiraj Gunasekaran. The company originally derived from Sony Borewells that have been in drilling industry since 1980 working in various private & public sector projects all over India. In 2002 Sony Rig Spares was founded and this was the first-step to move into retailing drilling tools, hydraulics accessories & spares and from there-on enhanced its caliber into rig manufacturing. This had led into establishing a new venture in the name of Sony Rigs and Hydraulics Private Limited. <br><br>
 
 Sony Rigs is manufacturing a wide range of drilling rigs that suits various applications (Water Well Drilling, Diamond Core Drilling, Reverse Circulation Drilling, Piling & Pole Drilling, Portable Drilling). Our rigs are made suitable to mount on trucks and crawlers. We also fabricate custom-built rigs as per the exact choice of customers. Everything we do is dedicated to meeting the needs of the drilling end-users. Driven by customers requirements, Sony Rigs design and manufacture its products around the traditions of superior quality, innovation & flexibility. By utilizing modern facilities for designing and fully integrated manufacturing processes, our end-user dreams are absolutely transformed into drilling solutions to meet the ever-increasing demands of the industry.
