--- a/templates/othtop.html
+++ b/templates/othtop.html
@@ -33,14 +33,14 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li>
-			<a href="products/waterwellrigs">Water Well Rigs
+			<a href="/products/waterwellrigs">Water Well Rigs
 			</a>
 		</li>
 		<li>
-			<a href="products/miningexplorationrigs">Mining & Exploration Rigs</a>
+			<a href="/products/miningexplorationrigs">Mining & Exploration Rigs</a>
 		</li>
 		<li >
-			<a href="products/autoloaderrigs">Autoloader Rigs</a>
+			<a href="/products/autoloaderrigs">Autoloader Rigs</a>
 		</li>
 
 
