--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 
 <div id="home" class="home" align="center">
-	<h1 align="center">WELCOME TO SONY RIGS</h1><br><br>
+	<h1 align="center" style="font-family: 'Pacifico', cursive;" id="hometitle">WELCOME TO SONY RIGS</h1><br><br>
 	<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval=3000 >
 
 		<!-- Carousel indicators -->
