--- a/stat/css/bootstrap.css
+++ b/stat/css/bootstrap.css
@@ -935,16 +935,15 @@ img {
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   display: block;
-  width: 100% \9;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 55%;
 }
 .img-rounded {
   border-radius: 6px;
 }
 .img-thumbnail {
   display: inline-block;
-  width: 100% \9;
+  width: 100% ;
   max-width: 100%;
   height: auto;
   padding: 4px;
@@ -5716,7 +5715,7 @@ button.close {
 }
 .carousel-inner {
   position: relative;
-  width: 100%;
+  width: 60%;
   overflow: hidden;
 }
 .carousel-inner > .item {
@@ -5764,8 +5763,9 @@ button.close {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  width: 15%;
+  left: 20%;
+
+  width: 5%;
   font-size: 20px;
   color: #fff;
   text-align: center;
@@ -5782,7 +5782,7 @@ button.close {
   background-repeat: repeat-x;
 }
 .carousel-control.right {
-  right: 0;
+  right: 20%;
   left: auto;
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
   background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
@@ -6258,7 +6258,7 @@ input{
 	min-height:100%;
 	min-width:100%;
 	background-color:#002147;
-	padding-top:75px;
+	padding-top:50px;
 	color:white;
 	margin:0;
 	text-align:"center";
@@ -6290,7 +6290,6 @@ input{
 }
 
 .accessories .row{
-	padding-top:2%;
 }
 .services{
 	min-height:100%;
@@ -6309,4 +6308,57 @@ input{
 	min-height:100%;
 	min-width:100%;
 	color:white;
+}
+
+.techspec{
+	width:100%;
+	height:70%;
+}
+.table{
+	color:white;
+}
+
+.about_img{
+	width:40%;
+	height:20%;
+}
+
+.products_page{
+	margin-top:10%;
+	color:white;
+}
+
+.prod_img{
+	position:relative;
+	height:200px;
+	width:200px;
+	border-radius:50%;
+	-webkit-transition: all 2s; /* For Safari 3.1 to 6.0 */
+	transition: all 2s;
+	z-index:0;
+}
+
+.prod_img:hover{
+	height:250px;
+	width:250px;
+	border-radius:50%;
+	z-index:100;
+	overflow:visible;
+}
+
+.products_page a{
+	color:white;
+
+}
+
+.product_image{
+	margin-top:100px;
+	width:70%;
+	height:50%;
+}
+
+.product_table{
+	margin:auto auto;
+	width:80%;
+	margin-top:50px;
 }
