--- a/templates/product.html
+++ b/templates/product.html
@@ -1,8 +1,28 @@
-{% include "othtop.html" %}
+{% include "htmltop.html" %}
 
 	<div class="prod_desc">
 		<div class="row">
-			<div class="col-md-4">	
+			<div class="col-md-4" id="cssmenu">	
+			<ul class="nav nav-stacked">
+					<li><a href="#">Water Well Rigs</a>
+					<ul class="meny1">
+						{% for prod in prod_list.waterwellrigs %}
+						<li><a href="/product/{{prod.url}}">{{ prod.name}}</a></li>
+						{% endfor %}
+					</ul>
+					</li>
+					
+
+					<li><a href="#">Mining and Exploration Rigs</a>
+					<ul class="meny1">
+						{% for prod in prod_list.miningexplorationrigs %}
+						<li><a href="/product/{{prod.url}}">{{ prod.name}}</a></li>
+
+						{% endfor %}
+					</ul>
+					</li>
+					<li><a href="#">Autoloader Rigs</a></li>
+				</ul>
 			</div>
 			<div class="col-md-6">
 				<img src="{{ prod.image.url }}" class="product_image">
