--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3706,6 +3706,17 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 2px;
   margin-left: 0;
 }
+
+.nav-stacked > li {
+	width:250px;
+}
+
+.nav-stacked > li > a{
+	background:#fff;
+	color:#000;
+	border-radius:5px;
+
+}
 .nav-justified {
   width: 100%;
 }
@@ -4090,26 +4101,27 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #fff;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
-  color: #fff;
+  color: #0059a7;
+  font-size:15px;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #fff;
+  color: #0059a7;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #fff;
+  color: #000;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #fff;
+  color: #000;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
@@ -5375,15 +5387,18 @@ button.close {
 }
 .modal {
   position: fixed;
-  top: 0;
+  top: 5%;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 5%;
   z-index: 1050;
   display: none;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   outline: 0;
+  height:90%;
+  width:90%;
+
 }
 .modal.fade .modal-dialog {
   -webkit-transition: -webkit-transform .3s ease-out;
@@ -5400,14 +5415,16 @@ button.close {
 }
 .modal-open .modal {
   overflow-x: hidden;
-  overflow-y: auto;
+
 }
 .modal-dialog {
   position: relative;
-  width: auto;
   margin: 10px;
+  width:90%;
+  height:90%;
 }
 .modal-content {
+
   position: relative;
   background-color: #fff;
   -webkit-background-clip: padding-box;
@@ -5450,7 +5467,8 @@ button.close {
 }
 .modal-body {
   position: relative;
-  padding: 15px;
+  height:90%;
+  width:100%;
 }
 .modal-footer {
   padding: 15px;
@@ -5472,11 +5490,10 @@ button.close {
   top: -9999px;
   width: 50px;
   height: 50px;
-  overflow: scroll;
 }
 @media (min-width: 768px) {
   .modal-dialog {
-    width: 600px;
+    width: 80%;
     margin: 30px auto;
   }
   .modal-content {
@@ -6265,7 +6282,7 @@ input{
 }
 
 .navbar{
-	background:#2980b9;
+	background:#fff;
 	border:0px;
 }
 
@@ -6275,6 +6292,7 @@ input{
 	color:white;
 	min-height:100%;
 	min-width:100%;
+	padding-top:80px;
 }
 
 .about > p{
@@ -6287,6 +6305,7 @@ input{
 	min-height:100%;
 	min-width:100%;
 	padding-left:5%;
+	padding-top:80px;
 }
 
 .accessories .row{
@@ -6294,6 +6313,7 @@ input{
 .services{
 	min-height:100%;
 	min-width:100%;
+	padding-top:80px;
 	color:white;
 }
 
@@ -6305,6 +6325,7 @@ input{
 
 
 .contact{
+	padding-top:80px;
 	min-height:100%;
 	min-width:100%;
 	color:white;
@@ -6319,8 +6340,9 @@ input{
 }
 
 .about_img{
-	width:40%;
+	width:150%;
 	height:20%;
+	margin-top:10px;
 }
 
 .products_page{
@@ -6352,7 +6374,6 @@ input{
 }
 
 .product_image{
-	margin-top:100px;
 	width:70%;
 	height:50%;
 }
@@ -6362,3 +6383,50 @@ input{
 	width:80%;
 	margin-top:50px;
 }
+
+.iso_img{
+	height:20%;
+	width:120%;
+}
+.meny1 {
+	display: none;
+	padding: 3px;
+	overflow: none;
+	background: #fff;
+	color: #a30000;
+
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+	.meny1  {
+	background:transparent;
+			width: 230px;
+	}
+		.meny1  li {
+			display: inline-block;
+			list-style-type: none;
+			padding: 3px 10px;
+		}
+			.meny1  li:before {
+				margin-right: 5px;
+				color: #fff;
+			}
+			.meny1  li a{
+				font-size: 16px;
+				font-family: "georgia";
+				color: #fff;
+				text-decoration:none;
+			}
+			.meny1 li a:hover{
+				text-decoration:none;
+			}
+
+.prod_desc {
+	padding-top:100px;
+}
+
+.logo{
+	margin-top:-4%;
+}
+
