--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,4 +1,4 @@
-{% include "othtop.html" %}
+{% include "htmltop.html" %}
 <div style="margin-top:15%;">
 <div id="dg-container" class="dg-container">
 	<div class="dg-wrapper">
