--- a/templates/htmlbottom.html
+++ b/templates/htmlbottom.html
@@ -1,3 +1,20 @@
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+			</div>
+			<div class="modal-body" style="color:black;">
+				<img src="/static/images/sony-advt.jpg" height=100% width=100%>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
 <script src="/static/js/jquery1-11-1.js"></script>
 <script src="/static/js/modernizr.custom.79639.js"></script>
 <script type="text/javascript" src="/static/js/jquery.gallery.js"></script>
@@ -6,32 +23,44 @@
 
 
 $(document).ready(function(){
-	$("#myCarousel").carousel();
-	$('#dg-container').gallery({
-					autoplay:true
-					});
+		$("#myCarousel").carousel();
+		$('#dg-container').gallery({
+autoplay:true
 });
-$('a[href^="#"]').on('click',function(e){
-			e.preventDefault();
-			var target=this.hash,
-			$target=$(target),x=150;
-			$('html,body').animate({
-				'scrollTop': $target.offset().top-80
-
-
-
-				},1000,'swing',function(){
-
-				//                   window.location.hash = target;
-
-				});
-
+		$('#cssmenu > ul > li > a').click(function() {
+			$('#cssmenu li').removeClass('active');
+			$(this).closest('li').addClass('active');	
+			var checkElement = $(this).next();
+			if((checkElement.is('ul')) && (checkElement.is(':visible'))) {
+			$(this).closest('li').removeClass('active');
+			checkElement.slideUp('normal');
+			}
+			if((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+			$('#cssmenu ul ul:visible').slideUp('normal');
+			checkElement.slideDown('normal');
+			}
+			if($(this).closest('li').find('ul').children().length == 0) {
+			return true;
+			} else {
+			return false;	
+			}		
 			});
-		if(window.location.search.indexOf("submit=True") > -1)
-			alert("We have received your request and will return back to you shortly");
-		if(window.location.search.indexOf("submit=False") > -1)
-			alert("There has been some error while submitting the form. Please try again");
-		
+
+var url = window.location.href;
+if (url.slice(-1)=="/"){
+	url = url.substring(0,url.length-1);
+}
+if(window.location.origin == url){
+	$("#myModal").modal("show");
+
+
+}
+});
+if(window.location.search.indexOf("submit=True") > -1)
+alert("We have received your request and will return back to you shortly");
+if(window.location.search.indexOf("submit=False") > -1)
+alert("There has been some error while submitting the form. Please try again");
+
 
 
 </script>
